derive_tests/tests/compile_fail/nested_no_modify.stderr
error: Unexpected modifier: nested
 --> tests/compile_fail/nested_no_modify.rs:7:14
  |
7 |     #[modify(nested)]
  |              ^^^^^^
